--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM4u53ch3NQPfDqP4WK/lH4",
+      "authorship_tag": "ABX9TyP5S4B6rmPbswjVVKy8f/y6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -64,18 +64,32 @@
     {
       "cell_type": "code",
       "source": [
-        "Name='Anushka Gupta'\n",
-        "SID=21107103\n",
+        "Name='Tanveen kaur'\n",
+        "SID=21107062\n",
         "Department='Mechanical'\n",
         "CGPA=9.9\n",
         "\n",
         "print('Hey, '+Name+' Here!\\nMy SID is ' + str(SID)+'\\nI am from '+Department+' Department and my CGPA is '+str(CGPA))"
       ],
       "metadata": {
-        "id": "TTnar7EBZqMv"
+        "id": "TTnar7EBZqMv",
+        "outputId": "e1c015c2-e13a-4ff6-c537-d27abafacd27",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hey, Tanveen kaur Here!\n",
+            "My SID is 21107062\n",
+            "I am from Mechanical Department and my CGPA is 9.9\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -95,7 +109,7 @@
         "id": "7HzySX4rY-qi",
         "outputId": "8a9c4746-04e5-4e7b-b862-25f5e7a71d77"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +139,7 @@
         "id": "-bNha6crZem2",
         "outputId": "58fcdc73-205c-4ef8-a1d7-b91492d637a7"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +169,7 @@
         "id": "vSm_TIEWat_Z",
         "outputId": "e91aa5c4-943d-48c1-be7d-80b598c7ea3d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +197,7 @@
         "id": "Zdw9acwHaPEa",
         "outputId": "5acad683-8d56-479b-b4b0-09b42db750e5"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
